create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3570,3 +3570,56 @@ section.lazy-placeholder:after {
 .cid-rVeBILEfSq blockquote {
   color: #767676;
 }
+.cid-rVf3nRhSJW {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/white-ceramic-mug-beside-spiral-notebook-and-laptop-3773413-2000x911.jpg");
+}
+.cid-rVf66oqXVh {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rVf66oqXVh .mbr-text,
+.cid-rVf66oqXVh blockquote {
+  color: #767676;
+}
+.cid-rVf6B6LGX1 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rVf6B6LGX1 .mbr-text {
+  color: #767676;
+}
+.cid-rVf6B6LGX1 h4 {
+  text-align: center;
+}
+.cid-rVf6B6LGX1 p {
+  text-align: center;
+}
+.cid-rVf6B6LGX1 .card-img span {
+  font-size: 96px;
+  color: #149dcc;
+}
+.cid-rVf7yDuMON {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-color: #238eb3;
+}
+.cid-rVf7yDuMON .mbr-text,
+.cid-rVf7yDuMON blockquote {
+  color: #767676;
+}
+.cid-rVf7yDuMON .mbr-text {
+  color: #ffffff;
+}
+.cid-rVfiAoVMTo {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rVfiAoVMTo .mbr-text,
+.cid-rVfiAoVMTo blockquote {
+  color: #767676;
+}
